--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-hook-form": "^7.39.4",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.6.0",
+    "react-player": "^2.11.0",
     "react-router": "^6.4.3",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
