--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 PORT = 8000
-URL =  mongodb+srv://mercy:loloklol@docketrun.fq44mfg.mongodb.net/DocketRun
+URL = mongodb+srv://info:loloklol.12A@jsw.6tat7au.mongodb.net/jsw
+
